// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Middleware with handler file 1`] = `
"// test/functions/fixtures/middleware-with-handler-file/.netlify/edge-functions/edgeMiddleware.mjs
import { createContext, trySerializeLocals } from \\"astro/middleware\\";
globalThis.process = {
  argv: [],
  env: Deno.env.toObject()
};
function netlify_edge_middleware_default({ request, context }) {
  return {
    title: \\"Hello world\\"
  };
}
var onRequest = (context, next) => {
  context.locals.title = \\"Middleware\\";
  return next();
};
async function middleware(request, context) {
  const url = new URL(request.url);
  const ctx = createContext({
    request,
    params: {}
  });
  ctx.locals = netlify_edge_middleware_default({ request, context });
  const next = async () => {
    const response = await fetch(url, {
      headers: {
        \\"x-astro-locals\\": trySerializeLocals(ctx.locals)
      }
    });
    return response;
  };
  return onRequest(ctx, next);
}
export {
  middleware as default
};
"
`;

exports[`Middleware with handler file 2`] = `
"// test/functions/fixtures/middleware-without-handler-file/.netlify/edge-functions/edgeMiddleware.mjs
import { createContext, trySerializeLocals } from \\"astro/middleware\\";
globalThis.process = {
  argv: [],
  env: Deno.env.toObject()
};
var onRequest = (context, next) => {
  context.locals.title = \\"Middleware\\";
  return next();
};
async function middleware(request, context) {
  const url = new URL(request.url);
  const ctx = createContext({
    request,
    params: {}
  });
  ctx.locals = {};
  const next = async () => {
    const response = await fetch(url, {
      headers: {
        \\"x-astro-locals\\": trySerializeLocals(ctx.locals)
      }
    });
    return response;
  };
  return onRequest(ctx, next);
}
export {
  middleware as default
};
"
`;
